<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_margin="25dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/featureOne"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/featureTwo"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/featureThree"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/featureFour"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/featureFive"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/featureSix"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/featureSeven"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/featureEight"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        />

</LinearLayout>