<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featureFive"
        android:layout_margin="25dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/accountNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputAccountNumber"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/withdrawAmount"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="fill_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/withdraw"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/withdraw"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"/>

    </LinearLayout>

</LinearLayout>